--- a/hibridacion/Orbitales_Atómicos.ipynb
+++ b/hibridacion/Orbitales_Atómicos.ipynb
@@ -450,7 +450,7 @@
    "outputs": [],
    "source": [
     "def compute_wavefunction(n, l, m, a0_scale_factor):\n",
-    "    a0 = a0_scale_factor * constants.physical_constants['Bohr radius'][0] * 1e12\n",
+    "    a0 = a0_scale_factor * physical_constants['Bohr radius'][0] * 1e12\n",
     "\n",
     "    grid_extend = 10\n",
     "    grid_resolution = 100\n",
