--- a/hibridacion/Orbitales_Atómicos.ipynb
+++ b/hibridacion/Orbitales_Atómicos.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": null,
    "metadata": {
     "id": "Fy-nMc4_aWDw"
    },
@@ -32,7 +32,7 @@
     "from matplotlib import cm, colors\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "#%matplotlib notebook\n"
+    "%matplotlib notebook\n"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {
     "id": "pOFRk-V_a4ii"
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "0.7357588823428847"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {
     "id": "HJPDspvIa_44"
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "270d657a411d4065b3d11ebf603881bd",
+       "model_id": "0bc2edd2e9464cafaf2f9719b8db9c1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d67e8e9c73149ebb96ec24f8838cd5d",
+       "model_id": "8c03a4ff96904c80bf18da182c5c44de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51f3ef7e837446ecb395b82f31a42e22",
+       "model_id": "51f10d8170cd4871a0c61c050b3b2754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,16 +180,29 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "def Hybrid(hibryd=''):\n",
-    "    #fig = plt.figure(figsize=(10, 10))\n",
-    "    #ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "    fig = plt.figure(figsize=(10, 10))\n",
+    "    ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
     "    if hibryd=='sp':\n",
-    "        ax=plt.axes(projection='3d')\n",
-    "        phi=np.linspace(0,2*np.math.pi,100)\n",
-    "        theta=np.linspace(0,np.math.pi,100)\n",
-    "        theta,phi=np.meshgrid(theta,phi)\n",
-    "        Z=phi*theta\n",
-    "        ax.plot_surface(theta,phi,Z)\n",
-    "        #ax.plot_surface(x2[:,1], y2, z2,alpha=0.5)\n",
+    "        Y_s=angular_function(0,0,1/np.sqrt(2),1/np.sqrt(2*np.math.pi))\n",
+    "        phi, theta = np.linspace(0, np.math.pi, 1240), np.linspace(0, 2 * np.math.pi, 1240)\n",
+    "        phi,theta= np.meshgrid(phi, theta)\n",
+    "        P_x=angular_function(-1,1,(np.sqrt(3)*np.sin(theta))/(2),(np.cos(phi))/(np.sqrt(np.math.pi)))\n",
+    "        Ysp_1=1/np.sqrt(2)*Y_s+(1/np.sqrt(2)*P_x)\n",
+    "        Ysp_2=1/np.sqrt(2)*Y_s-(1/np.sqrt(2)*P_x)\n",
+    "        #R_s=radial_function(2,0,Y_s,1.0)\n",
+    "        #R_x=radial_function(2,1,P_x,1.0)\n",
+    "        x = np.sin(theta) * np.cos(phi) * np.abs(Ysp_1)**2\n",
+    "        y = np.sin(theta) * np.sin(phi) * np.abs(Ysp_1)**2\n",
+    "        z = np.cos(theta) * np.abs(Ysp_1)**2\n",
+    "\n",
+    "        x2 = np.sin(theta) * np.cos(phi) * np.abs(Ysp_2)**2\n",
+    "        y2 = np.sin(theta) * np.sin(phi) * np.abs(Ysp_2)**2\n",
+    "        z2 = np.cos(theta) * np.abs(Ysp_2)**2\n",
+    "\n",
+    "        ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "        ax.view_init(elev=20, azim=15)\n",
+    "        ax.plot_surface(x, y, z,alpha=0.5)\n",
+    "        ax.plot_surface(x2[:,1], y2, z2,alpha=0.5)\n",
     "        ## x = np.sin(theta) * np.cos(phi) * np.abs(Ysp_1)**2\n",
     "        #y = np.sin(theta) * np.sin(phi) * np.abs(Ysp_1)**2\n",
     "        #z = np.cos(theta) * np.abs(Ysp_1)**2\n",
@@ -411,93 +424,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa4c029bdd8443ba88557fd503d9af17",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Hibrydation: ', options=('sp', 'sp2', 'sp3', 'sp2d', 'sp3d', 'sp3d2'), value='sp')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d557337a9fe45eba8508c2986b03121",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Plot', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1080fdc8e1f34f17a9755609aed27ed3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "def Hybrid(hibryd=''):\n",
-    "    fig = plt.figure(figsize=(10, 10))\n",
-    "    #ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "    #def radial_function(n, l, r, a0):\n",
-    "    #def angular_function(m, l, theta, phi):\n",
-    "    if hibryd=='sp':\n",
-    "        ax=plt.axes(projection='3d')\n",
-    "        phi=np.linspace(0,2*np.math.pi,100)\n",
-    "        theta=np.linspace(0,np.math.pi,100)\n",
-    "        theta,phi=np.meshgrid(theta,phi)\n",
-    "        Ys=angular_function(0,0,theta,phi)\n",
-    "        Rs=radial_function(1,0,1,1.0)\n",
-    "        ax.plot_surface(theta,phi,Z)\n",
-    "        plt.show()\n",
-    "hibr = widgets.Dropdown(\n",
-    "    options =['sp','sp2','sp3','sp2d','sp3d','sp3d2'],\n",
-    "    value='sp',\n",
-    "    description = 'Hibrydation: ',\n",
-    "    disabled = False\n",
-    ")\n",
-    "button = widgets.Button(description='Plot')\n",
-    "output = widgets.Output(layout = widgets.Layout())\n",
-    "def on_button_clicked(b):\n",
-    "    output.clear_output()\n",
-    "    with output:\n",
-    "        Hybrid(\n",
-    "        hibryd=hibr.value\n",
-    "        )\n",
-    "display(hibr)\n",
-    "\n",
-    "button.on_click(on_button_clicked)\n",
-    "\n",
-    "display(button, output)\n",
-    "#Hybrid(hibryd='sp')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "yUJGhxLhb0Gd"
@@ -519,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {
     "id": "toLOmEqjSjvM"
    },
@@ -573,169 +499,6 @@
    "source": [
     "def compute_probability_density(psi):\n",
     "    return np.abs(psi)**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 352,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e308f3b7e04445b4950541ef2f4e5f97",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Hibrydation: ', options=('sp', 'sp2', 'sp3', 'sp2d', 'sp3d', 'sp3d2'), value='sp')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb3bc820c6e54df4b307f6cc121aad30",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Plot', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7b551d1be7540bc8f347527563f4011",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "def Hybrid(hibryd=''):\n",
-    "    fig = plt.figure(figsize=(10, 10))\n",
-    "    #ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
-    "    #def radial_function(n, l, r, a0):\n",
-    "    #def angular_function(m, l, theta, phi):\n",
-    "    if hibryd=='sp':\n",
-    "        ax=plt.axes(projection='3d')\n",
-    "        Yps,(Ysphi,Ystheta,Yspsi_3d)=compute_wavefunction(1,0,0,1.0)\n",
-    "        Ypx,(Ypxphi,Ypxtheta,Ypxpsi_3d)=compute_wavefunction(2,1,-1,1.0)\n",
-    "        #Ysp_phi=(1/np.sqrt(2))*Ysphi+(1/np.sqrt(2))*Ypxphi\n",
-    "        #Ysp_theta=(1/np.sqrt(2))*Ystheta+(1/np.sqrt(2))*Ypxtheta\n",
-    "        #Ysp_psi_3d=(1/np.sqrt(2))*Yspsi_3d+(1/np.sqrt(2))*Ypxpsi_3d\n",
-    "        scale_s = 2.0  # Factor de escala para el orbital s\n",
-    "        scale_p = 2.5  # Factor de escala para el orbital p\n",
-    "        Ysp1phi=1/np.sqrt(2)*Ysphi+1/np.sqrt(2)*Ypxphi\n",
-    "        Ysp2phi=1/np.sqrt(2)*Ysphi-1/np.sqrt(2)*Ypxphi\n",
-    "        Ysp1theta=1/np.sqrt(2)*Ystheta+1/np.sqrt(2)*Ypxtheta\n",
-    "        Ysp2theta=1/np.sqrt(2)*Ystheta-1/np.sqrt(2)*Ypxtheta\n",
-    "        THETA=Ysp1theta+Ysp2theta\n",
-    "        PHI=Ysp1phi\n",
-    "        x = np.sin(PHI) * np.cos(THETA) * (abs(Ypxpsi_3d)*abs(Yspsi_3d))**2\n",
-    "        y = np.sin(PHI) * np.sin(THETA) *(abs(Ypxpsi_3d)*abs(Yspsi_3d))**2\n",
-    "        z = np.cos(PHI) * (abs(Ypxpsi_3d)*abs(Yspsi_3d))**2\n",
-    "        ax.plot_surface(x,y,z,alpha=0.6,cmap='plasma')\n",
-    "        plt.show()\n",
-    "        #x1 = np.sin(Ypxphi) * np.cos(Ypxtheta) * abs(Ypxpsi_3d)**2\n",
-    "        #y1 = np.sin(Ypxphi) * np.sin(Ypxtheta) *abs(Ypxpsi_3d)**2\n",
-    "        #z1 = np.cos(Ypxphi) * abs(Ypxpsi_3d)**2\n",
-    "        \n",
-    "        #x = np.sin(Ystheta) * np.cos(Ysphi) * abs(Yspsi_3d)**2\n",
-    "        #y = np.sin(Ystheta) * np.sin(Ysphi) *abs(Yspsi_3d)**2\n",
-    "        #z = np.cos(Ystheta) * abs(Yspsi_3d)**2\n",
-    "\n",
-    "       # xts=(1/np.sqrt(2)*x+1/np.sqrt(2)*x1)\n",
-    "        #yts=(1/np.sqrt(2)*y+1/np.sqrt(2)*y1)\n",
-    "        #zts=(1/np.sqrt(2)*z+1/np.sqrt(2)*z1)\n",
-    "        #xtn=(1/np.sqrt(2)*x-1/np.sqrt(2)*x1)\n",
-    "        #ytn=(1/np.sqrt(2)*y-1/np.sqrt(2)*y1)\n",
-    "        #ztn=(1/np.sqrt(2)*z-1/np.sqrt(2)*z1)\n",
-    "        #xt=xts-xtn\n",
-    "        #yt=yts-ytn\n",
-    "        #zt=zts-ztn\n",
-    "        #ax.plot_surface(x,y,z,alpha=0.5)\n",
-    "        #ax.plot_surface(x1,y1,z1,alpha=0.5)\n",
-    "       \n",
-    "        #ax.plot_surface(xtn,ytn,ztn,cmap='plasma')\n",
-    "        \n",
-    "    if hibryd=='sp2':\n",
-    "        ax=plt.axes(projection='3d')\n",
-    "        #\n",
-    "        #\n",
-    "        Yps,(Ysphi,Ystheta,Yspsi_3d)=compute_wavefunction(1,0,0,1.0)\n",
-    "        Ypx,(Ypxphi,Ypxtheta,Ypxpsi_3d)=compute_wavefunction(2,1,-1,1.0)\n",
-    "        Ypy,(Ypyphi,Ypytheta,Ypypsi_3d)=compute_wavefunction(2,1,0,1.0)\n",
-    "        Ysp1phi=(1/(np.sqrt(3)))*Ysphi+(1/np.sqrt(6))*Ypxphi+(1/np.sqrt(2))*Ypyphi\n",
-    "        Ysp2phi=(1/(np.sqrt(3)))*Ysphi+(1/np.sqrt(6))*Ypxphi-(1/np.sqrt(2))*Ypyphi\n",
-    "        Ysp3phi=(1/(np.sqrt(3)))*Ysphi-(2/np.sqrt(6))*Ypxphi\n",
-    "        Ysp1theta=(1/(np.sqrt(3)))*Ystheta+(1/np.sqrt(6))*Ypxtheta+(1/np.sqrt(2))*Ypytheta\n",
-    "        Ysp2theta=(1/(np.sqrt(3)))*Ystheta+(1/np.sqrt(6))*Ypxtheta-(1/np.sqrt(2))*Ypytheta\n",
-    "        Ysp3theta=(1/(np.sqrt(3)))*Ystheta-(2/np.sqrt(6))*Ypxtheta\n",
-    "        Theta=Ysp1theta+Ysp2theta+Ysp3theta\n",
-    "        Phi=Ysp1phi+Ysp2phi+Ysp3phi\n",
-    "        \n",
-    "        x = np.sin(Phi) * np.cos(Theta) * (abs(Ypypsi_3d)*abs(Ypxpsi_3d)*abs(Yspsi_3d)) **(4)\n",
-    "        y = np.sin(Phi) * np.sin(Theta) * (abs(Ypypsi_3d)*abs(Ypxpsi_3d*Yspsi_3d))**(4)\n",
-    "        z = np.cos(Phi) * (abs(Ypypsi_3d)*abs(Ypxpsi_3d)*abs(Yspsi_3d))**(4)\n",
-    "        ax.plot_surface(x,y,z,alpha=0.9,cmap='plasma')\n",
-    "        plt.show()   \n",
-    "    if hibryd=='sp3':\n",
-    "        ax=plt.axes(projection='3d')\n",
-    "        Yps,(Ysphi,Ystheta,Yspsi_3d)=compute_wavefunction(1,0,0,1.0)\n",
-    "        Ypx,(Ypxphi,Ypxtheta,Ypxpsi_3d)=compute_wavefunction(2,1,-1,1.0)\n",
-    "        Ypy,(Ypyphi,Ypytheta,Ypypsi_3d)=compute_wavefunction(3,1,0,1.0)\n",
-    "        Ypz,(Ypzphi,Ypztheta,Ypzpsi_3d)=compute_wavefunction(4,1,1,1.0)\n",
-    "        Ysp1phi=(1/2)*(Ysphi+Ypxphi+Ypyphi+Ypzphi)\n",
-    "        Ysp2phi=(1/2)*(+Ypxphi-Ypyphi-Ypzphi)\n",
-    "        Ysp3phi=(1/2)*(-Ypxphi-Ypyphi+Ypzphi)\n",
-    "        Ysp4phi=(1/2)*(Ysphi-Ypxphi+Ypyphi-Ypzphi)\n",
-    "        \n",
-    "        Ysp1theta=(1/2)*(Ystheta+Ypxtheta+Ypytheta+Ypztheta)\n",
-    "        Ysp2theta=(1/2)*(+Ypxtheta-Ypytheta-Ypztheta)\n",
-    "        Ysp3theta=(1/2)*(-Ypxtheta-Ypytheta+Ypztheta)\n",
-    "        Ysp4theta=(1/2)*(Ystheta-Ypxtheta+Ypytheta-Ypztheta)\n",
-    "        THETA=Ysp1theta+Ysp2theta+Ysp3theta+Ysp4theta\n",
-    "        PHI=Ysp1phi+Ysp2phi+Ysp3phi+Ysp4phi\n",
-    "        x = np.sin(PHI) * np.cos(THETA) * (abs(Ypzpsi_3d)*abs(Ypypsi_3d)*abs(Ypxpsi_3d)*abs(Yspsi_3d) )**(2)\n",
-    "        y = np.sin(PHI) * np.sin(THETA) *  (abs(Ypzpsi_3d)*abs(Ypypsi_3d)*abs(Ypxpsi_3d)*abs(Yspsi_3d) )**(2)\n",
-    "        z = np.cos(PHI) *  (abs(Ypzpsi_3d)*abs(Ypypsi_3d)*abs(Ypxpsi_3d)*abs(Yspsi_3d) )**(2)\n",
-    "        ax.plot_surface(x,y,z,alpha=0.9,cmap='plasma')\n",
-    "        plt.show()   \n",
-    "hibr = widgets.Dropdown(\n",
-    "    options =['sp','sp2','sp3','sp2d','sp3d','sp3d2'],\n",
-    "    value='sp',\n",
-    "    description = 'Hibrydation: ',\n",
-    "    disabled = False\n",
-    ")\n",
-    "button = widgets.Button(description='Plot')\n",
-    "output = widgets.Output(layout = widgets.Layout())\n",
-    "def on_button_clicked(b):\n",
-    "    output.clear_output()\n",
-    "    with output:\n",
-    "        Hybrid(\n",
-    "        hibryd=hibr.value\n",
-    "        )\n",
-    "display(hibr)\n",
-    "\n",
-    "button.on_click(on_button_clicked)\n",
-    "\n",
-    "display(button, output)\n",
-    "#Hybrid(hibryd='sp')"
    ]
   },
   {
@@ -749,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "XqvV40fURKkt"
    },
@@ -861,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -894,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e54c71febd23461c905adb6a2d701dbd",
+       "model_id": "3dee4eb067bf496f8c39505331934f23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -908,7 +671,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "265229a39de74f7683a1d8a23df4f665",
+       "model_id": "711c1f511c3e41c49a48883ad6236250",
        "version_major": 2,
        "version_minor": 0
       },
@@ -922,7 +685,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81ebc41edb694df18f097c71e918ba8b",
+       "model_id": "ace4634e900844e6b26bdab3111e360a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -936,7 +699,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89152093c9a842deb4fed8fca2efcfc2",
+       "model_id": "315c505a909346c9a8197b6cc581ca57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -950,7 +713,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f134aaf9c844c5c8ffac5f0d19cc48a",
+       "model_id": "70b5e9382d6f495a9280ff680d58d548",
        "version_major": 2,
        "version_minor": 0
       },
@@ -964,7 +727,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d91ffd9f35004a3095e1b01525448775",
+       "model_id": "4a91e20bbfb942f2a310ffc5023e48dd",
        "version_major": 2,
        "version_minor": 0
       },
